objects/BIR_Tracer__c.object
<CustomObject>
    <fields>
        <fullName>Age__c</fullName>
        <formula>TODAY() - DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Airport__c</fullName>
        <label>Airport</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agartala (IXA)</fullName>
                </value>
                <value>
                    <fullName>Ahmedabad (AMD)</fullName>
                </value>
                <value>
                    <fullName>Aizawl (AJL)</fullName>
                </value>
                <value>
                    <fullName>Amritsar (ATQ)</fullName>
                </value>
                <value>
                    <fullName>Bagdogra (IXB)</fullName>
                </value>
                <value>
                    <fullName>Bangkok (BKK)</fullName>
                </value>
                <value>
                    <fullName>Belagavi (IXG)</fullName>
                </value>
                <value>
                    <fullName>Bengaluru (BLR)</fullName>
                </value>
                <value>
                    <fullName>Chandigarh (IXC)</fullName>
                </value>
                <value>
                    <fullName>Chennai (MAA)</fullName>
                </value>
                <value>
                    <fullName>Coimbatore (CJB)</fullName>
                </value>
                <value>
                    <fullName>Colombo (CMB)</fullName>
                </value>
                <value>
                    <fullName>Dehradun (DED)</fullName>
                </value>
                <value>
                    <fullName>Delhi (DEL)</fullName>
                </value>
                <value>
                    <fullName>Dhaka(DAC)</fullName>
                </value>
                <value>
                    <fullName>Dharamshala (DHM)</fullName>
                </value>
                <value>
                    <fullName>Dubai (DXB)</fullName>
                </value>
                <value>
                    <fullName>Goa (GOI)</fullName>
                </value>
                <value>
                    <fullName>Gorakhpur (GOP)</fullName>
                </value>
                <value>
                    <fullName>Guwahati (GAU)</fullName>
                </value>
                <value>
                    <fullName>Hyderabad (HYD)</fullName>
                </value>
                <value>
                    <fullName>Jabalpur (JLR)</fullName>
                </value>
                <value>
                    <fullName>Jaipur (JAI)</fullName>
                </value>
                <value>
                    <fullName>Jammu (IXJ)</fullName>
                </value>
                <value>
                    <fullName>Jodhpur (JDH)</fullName>
                </value>
                <value>
                    <fullName>Kabul (KBL)</fullName>
                </value>
                <value>
                    <fullName>Kochi (COK)</fullName>
                </value>
                <value>
                    <fullName>Kolkata (CCU)</fullName>
                </value>
                <value>
                    <fullName>Kozhikode (CCJ)</fullName>
                </value>
                <value>
                    <fullName>Madurai (IXM)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Airport_of_Origin__c</fullName>
        <formula>IF(BIR__r.Airport1__r.Name!=NULL,BIR__r.Airport1__r.Name,TEXT(BIR__r.Arrival_Station__c))</formula>
        <label>Airport of Origin</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>BIR_Tracers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BIR_Origin_Station__c</fullName>
        <formula>BIR__r.Airport1__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BIR Origin Station</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BIR_Physical_Form_No__c</fullName>
        <formula>BIR__r.BIR_Physical_Form_No__c</formula>
        <label>BIR Physical Form No.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BIR_Tracer_No__c</fullName>
        <displayFormat>{00000}</displayFormat>
        <label>BIR Tracer No.</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>BIR__c</fullName>
        <label>Case No.</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>BIR Tracers</relationshipLabel>
        <relationshipName>BIR_Tracers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Baggage_Color__c</fullName>
        <formula>BLANKVALUE(Text( Baggage_Detail__r.Baggage_Color__c ),  Baggage_Detail__r.Other_Baggage_Color__c )</formula>
        <label>Baggage Color</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Baggage_Detail__c</fullName>
        <label>Baggage Detail</label>
        <referenceTo>Baggage_Detail__c</referenceTo>
        <relationshipLabel>BIR Tracers</relationshipLabel>
        <relationshipName>BIR_Tracers</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Baggage_Type__c</fullName>
        <formula>BLANKVALUE(Text( Baggage_Detail__r.Baggage_Type__c ),  Baggage_Detail__r.Other_Baggage_Type__c )</formula>
        <label>Baggage Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Baggage__c</fullName>
        <formula>BIR__r.Baggage_Tag__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Baggage #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_name_of_Baggage__c</fullName>
        <formula>Baggage_Detail__r.Brand_name_of_Suitcase__c</formula>
        <label>Brand name of Baggage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>My_Airport__c</fullName>
        <formula>TEXT(Airport__c) =  TEXT($User.Airport__c)</formula>
        <label>My Airport ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner_Name__c</fullName>
        <formula>BIR__r.Owner:User.FirstName &amp;&apos; &apos;&amp; BIR__r.Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PNR_No__c</fullName>
        <formula>BIR__r.PNR_No__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PNR No.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Case_Number__c</fullName>
        <formula>BIR__r.CaseNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Case Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Found</fullName>
                    <color>#78C953</color>
                    <label>Found</label>
                </value>
                <value>
                    <fullName>Not Found</fullName>
                    <color>#CC0000</color>
                    <label>Not Found</label>
                </value>
                <value>
                    <fullName>Not Responded</fullName>
                    <color>#999999</color>
                    <default>true</default>
                    <label>Not Responded</label>
                </value>
                <value>
                    <fullName>Similar Match Found</fullName>
                    <color>#F3D904</color>
                    <label>Similar Match Found</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tracer_sent_from_My_Airport__c</fullName>
        <formula>BIR__r.Airport1__r.Name ==  TEXT($User.Airport__c)</formula>
        <label>Tracer sent from My Airport?</label>
        <type>Checkbox</type>
    </fields>
    <label>BIR Tracer</label>
    <listViews>
        <fullName>All_BIR_Tracers</fullName>
        <columns>NAME</columns>
        <columns>BIR__c</columns>
        <columns>PNR_No__c</columns>
        <columns>BIR_Physical_Form_No__c</columns>
        <columns>Airport__c</columns>
        <columns>Airport_of_Origin__c</columns>
        <columns>Brand_name_of_Baggage__c</columns>
        <columns>Baggage_Type__c</columns>
        <columns>Baggage_Color__c</columns>
        <columns>Status__c</columns>
        <columns>Comments__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All BIR Tracers</label>
        <sharedTo>
            <role>Chief_Administrative_Officer</role>
            <role>Head_Ground_Services</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Open_BIR_Tracers</fullName>
        <columns>NAME</columns>
        <columns>BIR__c</columns>
        <columns>PNR_No__c</columns>
        <columns>BIR_Physical_Form_No__c</columns>
        <columns>Airport_of_Origin__c</columns>
        <columns>Brand_name_of_Baggage__c</columns>
        <columns>Baggage_Type__c</columns>
        <columns>Baggage_Color__c</columns>
        <columns>Status__c</columns>
        <columns>Comments__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>My_Airport__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Open BIR Tracers</label>
        <sharedTo>
            <role>Chief_Administrative_Officer</role>
            <role>Head_Ground_Services</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_BIR_Tracers</fullName>
        <columns>NAME</columns>
        <columns>BIR__c</columns>
        <columns>PNR_No__c</columns>
        <columns>BIR_Physical_Form_No__c</columns>
        <columns>Airport__c</columns>
        <columns>Brand_name_of_Baggage__c</columns>
        <columns>Baggage_Type__c</columns>
        <columns>Baggage_Color__c</columns>
        <columns>Status__c</columns>
        <columns>Comments__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>My_Airport__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My BIR Tracers</label>
        <sharedTo>
            <role>Airport_Manager</role>
            <role>Duty_Manager</role>
            <role>Duty_Officer</role>
            <role>Sr_CSE_CSE_Tr_CSE</role>
            <role>Supervisor</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Open_BIR_Tracers</fullName>
        <columns>NAME</columns>
        <columns>BIR__c</columns>
        <columns>PNR_No__c</columns>
        <columns>BIR_Physical_Form_No__c</columns>
        <columns>Airport_of_Origin__c</columns>
        <columns>Brand_name_of_Baggage__c</columns>
        <columns>Baggage_Type__c</columns>
        <columns>Baggage_Color__c</columns>
        <columns>Status__c</columns>
        <columns>Comments__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Not Responded</value>
        </filters>
        <filters>
            <field>My_Airport__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Open BIR Tracers</label>
        <sharedTo>
            <group>Airport_Staff</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Tracers_sent_from_My_Airport</fullName>
        <columns>NAME</columns>
        <columns>BIR__c</columns>
        <columns>PNR_No__c</columns>
        <columns>BIR_Physical_Form_No__c</columns>
        <columns>Airport_of_Origin__c</columns>
        <columns>Brand_name_of_Baggage__c</columns>
        <columns>Baggage_Type__c</columns>
        <columns>Baggage_Color__c</columns>
        <columns>Status__c</columns>
        <columns>Comments__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Tracer_sent_from_My_Airport__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Tracers sent from My Airport</label>
        <sharedTo>
            <role>Airport_Manager</role>
            <role>Duty_Manager</role>
            <role>Duty_Officer</role>
            <role>Sr_CSE_CSE_Tr_CSE</role>
            <role>Supervisor</role>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Record no.</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BIR Tracers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Airport_staff_can_update_the_BIR_Tracer</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    NOT(ISNEW()),
    NOT(ISCHANGED( LastModifiedDate )),
    Text( Airport__c ) != TEXT( $User.Airport__c )
)</errorConditionFormula>
        <errorMessage>You can update the BIR Tracer for your own airport only.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Comments_is_mandatory_for_Similar_Match</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISPICKVAL( Status__c, &apos;Similar Match&apos;),
ISBLANK(Comments__c)
)</errorConditionFormula>
        <errorDisplayField>Comments__c</errorDisplayField>
        <errorMessage>Please enter the baggage details in comments.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Status_cannot_be_Not_Responded</fullName>
        <active>true</active>
        <description>User cannot leave status as - Not Responded</description>
        <errorConditionFormula>AND(NOT(ISNEW()), ISPICKVAL(Status__c, &apos;Not Responded&apos;))</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Please update the Status.</errorMessage>
    </validationRules>
</CustomObject>